wp-content/themes/wp-reddoor/static/styles/src/guide.less
// guide main page with 4 big blocks
.post-type-archive-rdc_guide {

  // offset negative margin in bottom of page
  margin-bottom: -90px;
  overflow: hidden;

  .guide-wrapper {
    position: relative;
    top: -90px;
  }


}

// single guide page with several categories on right or a single article with a 50/50 split
body.tax-rdc_guide_category, body.single-rdc_guide {

  .guide-wrapper {
    position: fixed;
    top: 60px;
    overflow: hidden;
  }

}

// compensate for admin bar
body.tax-rdc_guide_category.admin-bar, body.single-rdc_guide.admin-bar {

  .guide-wrapper {
    top: 92px !important;
  }

}

body.post-type-archive-rdc_guide, body.tax-rdc_guide_category, body.single-rdc_guide {

  .guide-wrapper {
    padding-left: 0;
    padding-right: 0;
    width: 100%;
  }

  .row {
    margin-right: 0;
    margin-left: 0;
  }

  .guide-block {
    color: #FFF;
    text-align: center;
    padding-top: 0;
    padding-left: 0;
    padding-right: 0;
    min-height: 600px;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    background: no-repeat 50% 29%;

    //transition: all .2s ease-in-out;
    -moz-transition: all 4.5s;
    -webkit-transition: all 4.5s;
    transition: all 4.5s;

    &:hover {
      background: no-repeat 50% 31%;
    }

  }

  .guide-actions {
    position: absolute;
    bottom: 0;
    width: 100%;

    .guide-action-button.navigation-black {
      background-color: rgba(2, 2, 2, 0.8);
    }

    .guide-action-button.navigation-red {
      background-color: rgba(208, 53, 40, 0.93);
    }

    .guide-action-button > a {
      display: block;
      color: #FFF;
      height: 5em;
      line-height: 5em;
    }

  }

  .guide-overview-list {
    padding-top: 6em;
    // set to 0, then increased by JS
    padding-bottom: 0;
    background-color: #F3F0E9;
    min-height: 600px;
    overflow: scroll;
  }

  .guide-article-wrapper {
    padding: 9em 4.5em;
    background-color: #F3F0E9;
    min-height: 600px;
    overflow: scroll;

    .guide-article-container {
      padding-bottom: 15em;
      color: rgb(58, 58, 58);
    }

    article {
      font-size: 1.2em;
      line-height: 1.8em;

      ul {
        margin-left: 1.2em;
        margin-bottom: 2em;

        li {
          list-style-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAkAAAAJCAYAAADgkQYQAAAAOElEQVQYV2NkIAIwIqtpamz+D+PX1dfC5eAMkAJkCWQ+WBG6AphpMHEqK8JmJYabkN2A13f4ggsAAt8wCodw+UcAAAAASUVORK5CYII=);
          margin-bottom: 0.3em;
        }

      }

      p {
        margin-bottom: 2em;
      }

    }

  }

  .guide-group-image {
    min-height: 100px;
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    -webkit-border-top-right-radius: 5px;
    -webkit-border-bottom-right-radius: 5px;
    -moz-border-radius-topright: 5px;
    -moz-border-radius-bottomright: 5px;
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;
  }

  .guide-group-wrapper {
    margin: 0 1em 2em 1em;
    background: #FFF;
    padding: 0;

    .guide-group-inner-wrapper {
      padding: 0.6em 0.9em 1.2em;
    }

    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    border-radius: 5px;

    // transparent border to create a space for the red border that shows on hover
    border-top: 2px solid #F3F0E9;

    &:hover {
      border-top: 2px solid #CE3124;
      box-shadow: -2px 4px 5px rgba(136, 136, 136, 0.17)
    }

    .guide-group-title {
      font-weight: 600;
      color: #58575A;
      font-size: 22px;
      margin-bottom: 0.8em;
    }

    ul.guide-list {
      margin-left: 1.2em;

      li {
        list-style-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAkAAAAJCAYAAADgkQYQAAAAOElEQVQYV2NkIAIwIqtpamz+D+PX1dfC5eAMkAJkCWQ+WBG6AphpMHEqK8JmJYabkN2A13f4ggsAAt8wCodw+UcAAAAASUVORK5CYII=);
        margin-bottom: 0.3em;

        a {
          color: #727174;
        }

      }

    }

  }

  h2.guide-title {
    margin: 0 0 20px 0;
    color: #fff;
    font-size: 3.5em;
    text-align: center;
    font-weight: 600;
    text-shadow: -1px 2px 5px rgba(72, 72, 72, 0.67);
  }

  // try to vertically center the text in the guide blocks
  .guide-block-inner {
    padding-top: 200px;
  }

  h1.guide-article-title {
    margin: 1em 2.2em;
    color: #fff;
    font-size: 2.5em;
    text-align: center;
    font-weight: 600;
    text-shadow: -1px 2px 5px rgba(72, 72, 72, 0.67);
  }

  .guide-article-description {
    padding: 0 5em;
    line-height: 2em;
    font-size: 1.2em;
    text-shadow: -1px 2px 6px rgba(72, 72, 72, 0.97);
  }

  .guide-description {
    padding: 0 5em;
    line-height: 2em;
    font-size: 1.1em;
    text-shadow: -1px 2px 5px rgba(72, 72, 72, 0.67);
  }



}

